--- a/backEnd/CRMSSpringApp/src/main/resources/application.properties
+++ b/backEnd/CRMSSpringApp/src/main/resources/application.properties
@@ -31,6 +31,9 @@ spring.jpa.hibernate.ddl-auto = update
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
+spring.security.user.name=admin
+spring.security.user.password=admin
+
 
 #https://docs.spring.io/spring-boot/docs/current/reference/html/common-application-properties.html
 #http://www.thymeleaf.org/doc/tutorials/2.1/usingthymeleaf.html
