--- a/backEnd/CRMSSpringApp/src/main/resources/application.properties
+++ b/backEnd/CRMSSpringApp/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.thymeleaf.dialect=org.thymeleaf.extras.springsecurity4.dialect.SpringSecu
 # ===============================
 # = DATA SOURCE
 # ===============================
-spring.datasource.url = jdbc:mysql://localhost:3306/crmsdb
+spring.datasource.url = jdbc:mysql://localhost:3306/crmsdb2
 spring.datasource.username = root
 spring.datasource.password = 
 spring.datasource.testWhileIdle = true
