client car service, module car

--- a/client/.yo-rc.json
+++ b/client/.yo-rc.json
@@ -1,7 +1,7 @@
 {
   "generator-webpack-angularjs": {
-    "app": "CRMS",
-    "module": "mum",
+    "app": "client",
+    "module": "car",
     "services": [
       "LoginSvc"
     ],
@@ -10,7 +10,8 @@
     ],
     "states": [
       "login",
-      "home"
+      "home",
+      "home.new"
     ]
   }
 }
