--- a/client/package.json
+++ b/client/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "CRMS",
-  "description": "Client for Car Rental Management System",
+  "name": "client",
+  "description": "Client Renta Car",
   "version": "0.0.1",
   "main": "src/app.js",
   "author": {
-    "name": "Team 2",
+    "name": "Ezequiel Suarez",
     "email": "ezesubu@gmail.com"
   },
   "private": true,
@@ -35,12 +35,13 @@
   },
   "dependencies": {
     "@uirouter/angularjs": "^1.0.15",
-     "angular": "^1.6.9",
+    "angular": "^1.6.9",
     "bootstrap": "^4.0.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "ngstorage": "^0.3.11",
     "nprogress": "^0.2.0",
-    "popper.js": "^1.12.9"
+    "popper.js": "^1.12.9",
+    "restangular": "^1.6.1"
   }
 }
