--- a/backEnd/CRMSSpringApp/src/main/resources/application.properties
+++ b/backEnd/CRMSSpringApp/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.thymeleaf.dialect=org.thymeleaf.extras.springsecurity4.dialect.SpringSecu
 # ===============================
 # = DATA SOURCE
 # ===============================
-spring.datasource.url = jdbc:mysql://localhost:3306/crmsdb2
+spring.datasource.url = jdbc:mysql://localhost:3306/crmsdb
 spring.datasource.username = root
 spring.datasource.password = 
 spring.datasource.testWhileIdle = true
@@ -34,6 +34,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.security.user.name=admin
 spring.security.user.password=admin
 
+server.port=9090
 
 #https://docs.spring.io/spring-boot/docs/current/reference/html/common-application-properties.html
 #http://www.thymeleaf.org/doc/tutorials/2.1/usingthymeleaf.html
