--- a/backEnd/CRMSSpringApp/src/main/resources/application.properties
+++ b/backEnd/CRMSSpringApp/src/main/resources/application.properties
@@ -6,6 +6,7 @@
 # = Thymeleaf configurations (ThymeleafAutoConfiguration)
 # ===============================
 #LEGACYHTML5
+
 spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.cache=false
 spring.thymeleaf.encoding=UTF-8
@@ -16,7 +17,7 @@ spring.thymeleaf.dialect=org.thymeleaf.extras.springsecurity4.dialect.SpringSecu
 # ===============================
 spring.datasource.url = jdbc:mysql://localhost:3306/crmsdb
 spring.datasource.username = root
-spring.datasource.password = cu4lqu13r4
+spring.datasource.password =
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
 spring.datasource.test-on-borrow=true
@@ -35,6 +36,7 @@ spring.security.user.name=admin
 spring.security.user.password=admin
 
 server.port=9090
+
 
 #https://docs.spring.io/spring-boot/docs/current/reference/html/common-application-properties.html
 #http://www.thymeleaf.org/doc/tutorials/2.1/usingthymeleaf.html
